Fixed static file serving

--- a/usage.html
+++ b/usage.html
@@ -29,7 +29,7 @@ Body:
 	'lat',
 	'lon',
 	'el',
-	['type']
+	'eventType'
 }
 Returns: Event Object created
 </p>
@@ -44,7 +44,7 @@ Body:
 	'lat',
 	'lon',
 	'el',
-	['type']
+	['label']
 }
 Returns: Landmark Object created
 </p>
